<resources>
    <!--Strings Definidas para botões e ViewsTexts -->
    <string name="app_name">FazenTech</string>
    <string name="user">Usuario</string>
    <string name="senha">Senha</string>
    <string name="button">Login</string>
    <string name="login_btn">Entrar</string>
    <string name="cadastro_btn">Fazer Cadastro</string>
    <string name="peixe">Peixe</string>
    <string name="laranja">Laranja</string>
    <string name="todo">TODO</string>
    <string name="melancia">Melancia</string>
    <string name="leite">Leite</string>


</resources>