<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@color/colorPrimary"
    tools:context="com.example.fazentech.product">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imgtop"
            android:layout_width="208dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:background="@drawable/backgroudtop"
            android:src="@drawable/nprodutos" />

    </RelativeLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/background_bg"
        android:rowCount="2"
        android:columnCount="2"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/leite"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@drawable/background_bg"
            app:cardElevation="4dp"
            tools:ignore="MissingClass">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="173dp"
                android:background="@drawable/backgroudtop"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="3">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/leitelogo"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/leite"
                    android:textColor="#001"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="@drawable/background_bg"
            android:id="@+id/melancia"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="4dp">

            <LinearLayout
                android:background="@drawable/backgroudtop"
                android:padding="10dp"
                android:layout_width="190dp"
                android:layout_height="173dp"
                android:orientation="vertical"
                android:weightSum="3">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/melancia"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/melancia"
                    android:layout_marginBottom="20dp"
                    android:textSize="15sp"
                    android:textColor="#001"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="@drawable/background_bg"
            android:id="@+id/laranja"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="190dp"
                android:layout_height="173dp"
                android:orientation="vertical"
                android:weightSum="3">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/laranja"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/todo"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laranja"
                    android:layout_marginBottom="20dp"
                    android:textSize="15sp"
                    android:textColor="#001"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:background="@drawable/background_bg"
            android:id="@+id/limão"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="173dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="3">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/peixe" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/peixe"
                    android:textColor="#001"
                    android:textSize="15sp"

                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

</androidx.appcompat.widget.LinearLayoutCompat>